std_out/main/managerial_layer-1399.err
Traceback (most recent call last):
  File "main.py", line 2, in <module>
    from network_analysis import *
  File "/cluster/raid/home/michael.tsesmelis/SideProject/network_analysis.py", line 41
    delta_em = (padding[year]['emergingness'] / padding[year-1]['emergingness'])
    ^
IndentationError: unexpected indent
